Fix gaps

--- a/website/src/components/Account/Account.module.scss
+++ b/website/src/components/Account/Account.module.scss
@@ -27,7 +27,7 @@
 .AccountFull {
     display: flex;
     flex-direction: column;
-    gap: 0.5em;
+    gap: 1em;
 
     ul {
         gap: 0.3em;
