--- a/website/src/elements/AccountInfo/AccountInfo.module.scss
+++ b/website/src/elements/AccountInfo/AccountInfo.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    gap: 1em;
+    gap: 0.5em;
 
     img {
         width: 2em;
